# ENPH353_CompetitionRC

./: ..gitignore.swp
src/2024_competition/enph353/enph353_gazebo/scripts/: 100scenarios.csv  100scenariosT.csv  plate_generator.py
src/2024_competition/enph353/enph353_utils/launch/: droneUI.launch  robots.launch
src/2024_competition/enph353/enph353_utils/scripts/: competition_protocol.py  sign_reader.py
src/RC_controller/: CMakeLists.txt  RC_App.py  RC_App.ui  README.md  Respawn.py  competition_protocol.py  package.xml  respawn.py  sign_reader.py
src/RC_controller/controllers/: camera_controller.yaml
src/RC_controller/launch/: droneUI.launch  launchRC.launch
src/RC_controller/nodes/: character_recognition.py  clue_publisher.py  clue_verification.py  driving.py  ocr.py  road_driving.py  sign_reader.py  test.py
src/custom_camera_plugic/: CMakeLists.txt  package.xml
src/custom_camera_plugic/src/: custom_camera_plugin.cpp
src/fly_bot/src/: pid.py
src/hector_models/hector_sensors_description/urdf/: generic_camera.urdf.xacro
src/hector_quadrotor/hector_quadrotor_controller/params/: controller.yaml
src/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro  quadrotor_with_2cams.gazebo.xacro  quadrotor_with_2cams.urdf.xacro  quadrotor_with_5cams.gazebo.xacro  quadrotor_with_5cams.urdf.xacro  quadrotor_with_cam.urdf.xacro
src/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
src/hector_quadrotor/hector_quadrotor_gazebo/urdf/: quadrotor_sensors.gazebo.xacro
src/hector_ui/src/: ui_hector_quad.py
(+6 files in other folders)
