<package>
  <name>custom_camera_plugin</name>
  <version>0.1.0</version>
  <description>Custom Gazebo Camera Plugin</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
</package>
